--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -349,6 +349,78 @@ common eval
     build-depends: hls-eval-plugin == 2.6.0.0
     cpp-options: -Dhls_eval
 
+library hls-eval-plugin
+  import: warnings
+  exposed-modules:
+    Ide.Plugin.Eval
+    Ide.Plugin.Eval.Types
+
+  hs-source-dirs:     plugins/hls-eval-plugin/src
+  other-modules:
+    Ide.Plugin.Eval.Code
+    Ide.Plugin.Eval.CodeLens
+    Ide.Plugin.Eval.Config
+    Ide.Plugin.Eval.GHC
+    Ide.Plugin.Eval.Parse.Comments
+    Ide.Plugin.Eval.Parse.Option
+    Ide.Plugin.Eval.Rules
+    Ide.Plugin.Eval.Util
+
+  build-depends:
+    , aeson
+    , base                  >=4.12  && <5
+    , bytestring
+    , containers
+    , deepseq
+    , Diff                  ^>=0.4.0
+    , dlist
+    , extra
+    , filepath
+    , ghc
+    , ghc-boot-th
+    , ghcide                == 2.6.0.0
+    , hls-graph
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp
+    , lsp-types
+    , megaparsec            >=9.0
+    , mtl
+    , parser-combinators    >=1.2
+    , text
+    , transformers
+    , unliftio
+    , unordered-containers
+
+  if flag(pedantic)
+    ghc-options: -Werror
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+test-suite hls-eval-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-eval-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , extra
+    , filepath
+    , hls-eval-plugin
+    , hls-plugin-api
+    , hls-test-utils   == 2.6.0.0
+    , lens
+    , lsp-types
+    , text
+    , row-types
+
 -----------------------------
 -- import lens plugin
 -----------------------------
