--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -435,6 +435,52 @@ flag importLens
   default:     True
   manual:      True
 
+library hls-explicit-imports-plugin
+  import:           warnings
+  exposed-modules:    Ide.Plugin.ExplicitImports
+  hs-source-dirs:     plugins/hls-explicit-imports-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , deepseq
+    , ghc
+    , ghcide                == 2.6.0.0
+    , hls-graph
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp
+    , mtl
+    , text
+    , transformers
+    , unordered-containers
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+  if flag(pedantic)
+    ghc-options: -Werror
+
+test-suite hls-explicit-imports-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-explicit-imports-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , extra
+    , filepath
+    , hls-explicit-imports-plugin
+    , hls-test-utils
+    , lens
+    , lsp-types
+    , row-types
+    , text
+
 -----------------------------
 -- rename plugin
 -----------------------------
