--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -495,6 +495,48 @@ common rename
     build-depends: hls-rename-plugin == 2.6.0.0
     cpp-options: -Dhls_rename
 
+library hls-rename-plugin
+  exposed-modules:  Ide.Plugin.Rename
+  hs-source-dirs:   plugins/hls-rename-plugin/src
+  build-depends:
+    , base                  >=4.12    && <5
+    , containers
+    , extra
+    , ghc
+    , ghc-exactprint
+    , ghcide                == 2.6.0.0
+    , hashable
+    , hiedb
+    , hie-compat
+    , hls-plugin-api        == 2.6.0.0
+    , hls-refactor-plugin
+    , lens
+    , lsp
+    , lsp-types
+    , mtl
+    , mod
+    , syb
+    , text
+    , transformers
+    , unordered-containers
+
+  default-language: Haskell2010
+
+test-suite hls-rename-plugin-tests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-rename-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , filepath
+    , hls-plugin-api
+    , hls-rename-plugin
+    , hls-test-utils             == 2.6.0.0
+
 -----------------------------
 -- retrie plugin
 -----------------------------
