--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -551,6 +551,57 @@ common retrie
     build-depends: hls-retrie-plugin == 2.6.0.0
     cpp-options: -Dhls_retrie
 
+library hls-retrie-plugin
+  exposed-modules:    Ide.Plugin.Retrie
+  hs-source-dirs:     plugins/hls-retrie-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12    && <5
+    , bytestring
+    , containers
+    , deepseq
+    , directory
+    , extra
+    , ghc
+    , ghcide                == 2.6.0.0
+    , hashable
+    , hls-plugin-api        == 2.6.0.0
+    , hls-refactor-plugin
+    , lens
+    , lsp
+    , lsp-types
+    , mtl
+    , retrie                >=0.1.1.0
+    , safe-exceptions
+    , stm
+    , text
+    , transformers
+    , unordered-containers
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+  ghc-options:        -Wno-unticked-promoted-constructors
+
+test-suite hls-retrie-plugin-tests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-retrie-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , filepath
+    , hls-plugin-api
+    , hls-refactor-plugin
+    , hls-retrie-plugin
+    , hls-test-utils             == 2.6.0.0
+    , text
+
 -----------------------------
 -- hlint plugin
 -----------------------------
