--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -616,6 +616,72 @@ common hlint
     build-depends: hls-hlint-plugin == 2.6.0.0
     cpp-options: -Dhls_hlint
 
+library hls-hlint-plugin
+  exposed-modules:    Ide.Plugin.Hlint
+  hs-source-dirs:     plugins/hls-hlint-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12    && <5
+    , binary
+    , bytestring
+    , containers
+    , data-default
+    , deepseq
+    , Diff                  ^>=0.4.0
+    , directory
+    , extra
+    , filepath
+    , ghc-exactprint        >=0.6.3.4
+    , ghcide                == 2.6.0.0
+    , hashable
+    , hlint                 >= 3.5 && < 3.9
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp
+    , mtl
+    , refact
+    , regex-tdfa
+    , stm
+    , temporary
+    , text
+    , transformers
+    , unordered-containers
+    , ghc-lib-parser
+    , ghc-lib-parser-ex
+    , apply-refact
+
+  cpp-options:   -DHLINT_ON_GHC_LIB
+  ghc-options:
+    -Wall -Wredundant-constraints -Wno-name-shadowing
+    -Wno-unticked-promoted-constructors
+
+  if flag(pedantic)
+    ghc-options: -Werror
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+test-suite hls-hlint-plugin-tests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-hlint-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base
+    , containers
+    , filepath
+    , hls-hlint-plugin
+    , hls-plugin-api
+    , hls-test-utils      == 2.6.0.0
+    , lens
+    , lsp-types
+    , row-types
+    , text
+
 -----------------------------
 -- stan plugin
 -----------------------------
