--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -696,6 +696,66 @@ common stan
     build-depends: hls-stan-plugin == 2.6.0.0
     cpp-options: -Dhls_stan
 
+library hls-stan-plugin
+  if (impl(ghc > 8.8.1) && impl(ghc <= 9.2.3) || impl(ghc >= 9.4.0) && impl(ghc < 9.10.0))
+    buildable: True
+  else
+    buildable: False
+  exposed-modules:    Ide.Plugin.Stan
+  hs-source-dirs:     plugins/hls-stan-plugin/src
+  build-depends:
+      base
+    , containers
+    , data-default
+    , deepseq
+    , hashable
+    , hie-compat
+    , hls-plugin-api
+    , ghc
+    , ghcide
+    , lsp-types
+    , text
+    , transformers
+    , unordered-containers
+    , stan >= 0.1.2.0
+    , trial
+    , directory
+
+  default-language:   Haskell2010
+  default-extensions:
+    LambdaCase
+    NamedFieldPuns
+    DeriveGeneric
+    TypeFamilies
+    StandaloneDeriving
+    DuplicateRecordFields
+    OverloadedStrings
+
+test-suite hls-stan-plugin-tests
+  if (impl(ghc > 8.8.1) && impl(ghc <= 9.2.3) || impl(ghc >= 9.4.0) && impl(ghc < 9.10.0))
+    buildable: True
+  else
+    buildable: False
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-stan-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base
+    , containers
+    , filepath
+    , hls-stan-plugin
+    , hls-plugin-api
+    , hls-test-utils      == 2.6.0.0
+    , lens
+    , lsp-types
+    , text
+ default-extensions:
+    NamedFieldPuns
+    OverloadedStrings
+
 -----------------------------
 -- module name plugin
 -----------------------------
