--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -770,6 +770,37 @@ common moduleName
     build-depends: hls-module-name-plugin == 2.6.0.0
     cpp-options: -Dhls_moduleName
 
+library hls-module-name-plugin
+  import: warnings
+  exposed-modules:  Ide.Plugin.ModuleName
+  hs-source-dirs:   plugins/hls-module-name-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , directory
+    , filepath
+    , ghcide                == 2.6.0.0
+    , hls-plugin-api        == 2.6.0.0
+    , lsp
+    , text
+    , transformers
+
+  default-language: Haskell2010
+
+test-suite hls-module-name-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-module-name-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , hls-module-name-plugin
+    , hls-test-utils          == 2.6.0.0
+
 -----------------------------
 -- pragmas plugin
 -----------------------------
