--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -863,6 +863,54 @@ common splice
     build-depends: hls-splice-plugin == 2.6.0.0
     cpp-options: -Dhls_splice
 
+library hls-splice-plugin
+  exposed-modules:
+    Ide.Plugin.Splice
+    Ide.Plugin.Splice.Types
+
+  ghc-options:        -Wall -Wno-unticked-promoted-constructors
+  hs-source-dirs:     plugins/hls-splice-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , dlist
+    , extra
+    , foldl
+    , ghc
+    , ghc-exactprint
+    , ghcide                == 2.6.0.0
+    , hls-plugin-api        == 2.6.0.0
+    , hls-refactor-plugin
+    , lens
+    , lsp
+    , mtl
+    , retrie
+    , syb
+    , text
+    , transformers
+    , unliftio-core
+    , unordered-containers
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+test-suite hls-splice-plugin-tests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-splice-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , hls-splice-plugin
+    , hls-test-utils == 2.6.0.0
+    , text
+    , row-types
+
 -----------------------------
 -- alternate number format plugin
 -----------------------------
