--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -990,6 +990,43 @@ common qualifyImportedNames
     build-depends: hls-qualify-imported-names-plugin == 2.6.0.0
     cpp-options: -Dhls_qualifyImportedNames
 
+library hls-qualify-imported-names-plugin
+  exposed-modules:    Ide.Plugin.QualifyImportedNames
+  hs-source-dirs:     plugins/hls-qualify-imported-names-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , deepseq
+    , ghc
+    , ghcide                == 2.6.0.0
+    , hls-graph
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp
+    , text
+    , unordered-containers
+    , dlist
+    , transformers
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+
+test-suite hls-qualify-imported-names-tests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-qualify-imported-names-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , text
+    , filepath
+    , hls-qualify-imported-names-plugin
+    , hls-test-utils             == 2.6.0.0
+
 -----------------------------
 -- code range plugin
 -----------------------------
