--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1041,6 +1041,52 @@ common codeRange
     build-depends: hls-code-range-plugin == 2.6.0.0
     cpp-options: -Dhls_codeRange
 
+library hls-code-range-plugin
+  import: warnings
+  exposed-modules:
+    Ide.Plugin.CodeRange
+    Ide.Plugin.CodeRange.Rules
+  other-modules:
+    Ide.Plugin.CodeRange.ASTPreProcess
+  hs-source-dirs: plugins/hls-code-range-plugin/src
+  default-language:   Haskell2010
+  build-depends:
+    , base             >=4.12 && <5
+    , containers
+    , deepseq
+    , extra
+    , ghcide           == 2.6.0.0
+    , hashable
+    , hls-plugin-api   == 2.6.0.0
+    , lens
+    , lsp
+    , mtl
+    , semigroupoids
+    , transformers
+    , vector
+
+test-suite hls-code-range-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-code-range-plugin/test
+  main-is:          Main.hs
+  other-modules:
+    Ide.Plugin.CodeRangeTest
+    Ide.Plugin.CodeRange.RulesTest
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , bytestring
+    , filepath
+    , hls-code-range-plugin
+    , hls-test-utils             == 2.6.0.0
+    , lens
+    , lsp
+    , lsp-test
+    , transformers
+    , vector
+
 -----------------------------
 -- change type signature plugin
 -----------------------------
