--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1101,6 +1101,52 @@ common changeTypeSignature
     build-depends: hls-change-type-signature-plugin == 2.6.0.0
     cpp-options: -Dhls_changeTypeSignature
 
+library hls-change-type-signature-plugin
+  import: warnings
+  exposed-modules:  Ide.Plugin.ChangeTypeSignature
+  hs-source-dirs:   plugins/hls-change-type-signature-plugin/src
+  build-depends:
+    , base             >=4.12 && < 5
+    , ghcide           == 2.6.0.0
+    , hls-plugin-api   == 2.6.0.0
+    , lsp-types
+    , regex-tdfa
+    , syb
+    , text
+    , transformers
+    , containers
+  default-language: Haskell2010
+  default-extensions:
+    ConstraintKinds
+    DataKinds
+    ExplicitNamespaces
+    FlexibleContexts
+    NamedFieldPuns
+    OverloadedStrings
+    RecordWildCards
+    TypeOperators
+
+
+test-suite hls-change-type-signature-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-change-type-signature-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
+  build-depends:
+    , base                 >=4.12 && < 5
+    , filepath
+    , hls-change-type-signature-plugin
+    , hls-test-utils       == 2.6.0.0
+    , regex-tdfa
+    , text
+  default-extensions:
+    NamedFieldPuns
+    OverloadedStrings
+    TypeOperators
+    ViewPatterns
+
 -----------------------------
 -- gadt plugin
 -----------------------------
