--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1161,6 +1161,45 @@ common gadt
     build-depends: hls-gadt-plugin == 2.6.0.0
     cpp-options: -Dhls_gadt
 
+library hls-gadt-plugin
+  import: warnings
+  exposed-modules:    Ide.Plugin.GADT
+  other-modules:      Ide.Plugin.GHC
+
+  hs-source-dirs:     plugins/hls-gadt-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , extra
+    , ghc
+    , ghcide                 == 2.6.0.0
+    , ghc-exactprint
+    , hls-plugin-api         == 2.6.0.0
+    , hls-refactor-plugin
+    , lens
+    , lsp                    >=2.3
+    , mtl
+    , text
+    , transformers
+
+  default-language:   Haskell2010
+  default-extensions: DataKinds
+
+test-suite hls-gadt-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-gadt-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , hls-gadt-plugin
+    , hls-test-utils              == 2.6.0.0
+    , text
+
 -----------------------------
 -- explicit fixity plugin
 -----------------------------
