--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1214,6 +1214,39 @@ common explicitFixity
     build-depends: hls-explicit-fixity-plugin == 2.6.0.0
     cpp-options: -DexplicitFixity
 
+library hls-explicit-fixity-plugin
+  import: warnings
+  exposed-modules:    Ide.Plugin.ExplicitFixity
+
+  hs-source-dirs:     plugins/hls-explicit-fixity-plugin/src
+  build-depends:
+      base                  >=4.12 && <5
+    , containers
+    , deepseq
+    , extra
+    , ghcide                == 2.6.0.0
+    , hashable
+    , hls-plugin-api        == 2.6.0.0
+    , lsp                   >=2.3
+    , text
+
+  default-language:   Haskell2010
+  default-extensions: DataKinds
+
+test-suite hls-explicit-fixity-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-explicit-fixity-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , hls-explicit-fixity-plugin
+    , hls-test-utils              == 2.6.0.0
+    , text
+
 -----------------------------
 -- explicit fields plugin
 -----------------------------
