--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1357,6 +1357,34 @@ common floskell
     build-depends: hls-floskell-plugin == 2.6.0.0
     cpp-options: -Dhls_floskell
 
+library hls-floskell-plugin
+  import:           warnings
+  exposed-modules:  Ide.Plugin.Floskell
+  hs-source-dirs:   plugins/hls-floskell-plugin/src
+  build-depends:
+    , base            >=4.12 && <5
+    , floskell        ^>=0.11.0
+    , ghcide          == 2.6.0.0
+    , hls-plugin-api  == 2.6.0.0
+    , lsp-types       ^>=2.1
+    , mtl
+    , text
+
+  default-language: Haskell2010
+
+test-suite hls-floskell-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-floskell-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , hls-floskell-plugin
+    , hls-test-utils       == 2.6.0.0
+
 -----------------------------
 -- fourmolu plugin
 -----------------------------
