--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1399,6 +1399,45 @@ common fourmolu
     build-depends: hls-fourmolu-plugin == 2.6.0.0
     cpp-options: -Dhls_fourmolu
 
+library hls-fourmolu-plugin
+  import: warnings
+  exposed-modules:
+      Ide.Plugin.Fourmolu
+  hs-source-dirs:   plugins/hls-fourmolu-plugin/src
+  build-depends:
+    , base            >=4.12 && <5
+    , filepath
+    , fourmolu        ^>= 0.14
+    , ghc-boot-th
+    , ghcide          == 2.6.0.0
+    , hls-plugin-api  == 2.6.0.0
+    , lens
+    , lsp
+    , mtl
+    , process-extras  >= 0.7.1
+    , text
+    , transformers
+
+  default-language: Haskell2010
+
+test-suite hls-fourmolu-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-fourmolu-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+    fourmolu:fourmolu
+  build-depends:
+    , base            >=4.12 && <5
+    , aeson
+    , filepath
+    , hls-fourmolu-plugin
+    , hls-plugin-api
+    , hls-test-utils       == 2.6.0.0
+    , lsp-test
+
 -----------------------------
 -- ormolu plugin
 -----------------------------
