--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1452,6 +1452,45 @@ common ormolu
     build-depends: hls-ormolu-plugin == 2.6.0.0
     cpp-options: -Dhls_ormolu
 
+library hls-ormolu-plugin
+  import:           warnings
+  exposed-modules:  Ide.Plugin.Ormolu
+  hs-source-dirs:   plugins/hls-ormolu-plugin/src
+  build-depends:
+    , base            >=4.12  && <5
+    , extra
+    , filepath
+    , ghc-boot-th
+    , ghcide          == 2.6.0.0
+    , hls-plugin-api  == 2.6.0.0
+    , lsp
+    , mtl
+    , process-extras  >= 0.7.1
+    , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.5 || ^>= 0.6 || ^>= 0.7
+    , text
+    , transformers
+
+  default-language: Haskell2010
+
+test-suite hls-ormolu-plugin-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-ormolu-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+    ormolu:ormolu
+  build-depends:
+    , base
+    , aeson
+    , filepath
+    , hls-ormolu-plugin
+    , hls-plugin-api
+    , hls-test-utils     == 2.6.0.0
+    , lsp-types
+    , ormolu
+
 -----------------------------
 -- stylish-haskell plugin
 -----------------------------
