--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1666,6 +1666,77 @@ common semanticTokens
     build-depends: hls-semantic-tokens-plugin == 2.6.0.0
     cpp-options: -Dhls_semanticTokens
 
+library hls-semantic-tokens-plugin
+  ghc-options: -Wall
+  buildable: True
+  exposed-modules:
+    Ide.Plugin.SemanticTokens
+    Ide.Plugin.SemanticTokens.Types
+    Ide.Plugin.SemanticTokens.Mappings
+  other-modules:
+    Ide.Plugin.SemanticTokens.Query
+    Ide.Plugin.SemanticTokens.SemanticConfig
+    Ide.Plugin.SemanticTokens.Utils
+    Ide.Plugin.SemanticTokens.Internal
+
+  hs-source-dirs:     plugins/hls-semantic-tokens-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , extra
+    , hiedb
+    , mtl                   >= 2.2
+    , ghcide                == 2.6.0.0
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp                    >=2.3
+    , sqlite-simple
+    , text
+    , unordered-containers
+    , transformers
+    , bytestring
+    , syb
+    , array
+    , deepseq
+    , hls-graph == 2.6.0.0
+    , template-haskell
+    , data-default
+
+  default-language:   Haskell2010
+  default-extensions: DataKinds
+
+test-suite hls-semantic-tokens-plugin-tests
+  type:             exitcode-stdio-1.0
+  ghc-options: -Wall
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-semantic-tokens-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , extra
+    , filepath
+    , hls-semantic-tokens-plugin
+    , hls-test-utils              == 2.6.0.0
+    , ghcide-test-utils
+    , hls-plugin-api
+    , lens
+    , lsp
+    , ghc
+    , text-rope
+    , lsp-test
+    , text
+    , data-default
+    , bytestring
+    , ghcide                == 2.6.0.0
+    , hls-plugin-api        == 2.6.0.0
+    , template-haskell
+    , data-default
+
 -----------------------------
 -- HLS
 -----------------------------
